agregando estilos a la seccion estudiantes

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <section id="students">
+    <!--estructura de la section students-->
+    <section class="students">
       <div class="colum-left">
-        <h1>SPECIALIZATION:</h1>
-        <ul>
-          <li>Javascript</li>
-          <li>UX Design</li>
-          <li>Front end Designer</li>
-        </ul>
+        <div class="specialization">
+            <h1>SPECIALIZATION:</h1>
+            <ul>
+              <li><span class="icon-square-o"></span>Javascript</li>
+              <li><span class="icon-square-o"></span>UX Design</li>
+              <li><span class="icon-square-o"></span>Front end Designer</li>
+            </ul>
+        </div>   
       </div>
       <div class="colum-right">
         <div class="search">
@@ -23,8 +26,8 @@
           <input type="text" name="" value="">
         </div>
         <div class="students-skills">
-          <figure>
-            <img src="http://dummyimage.com/244x133.png/ff4444/ffffff" alt="diana">
+          <figure class="figure">
+            <img class="image"src="http://dummyimage.com/244x133.png/ff4444/ffffff" alt="diana">
           </figure>
           <div class="colum-1">
             <h1>DIANA NAVARRO</h1>
