--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
               <li><span class="icon-square-o"></span>UX Design</li>
               <li><span class="icon-square-o"></span>Front end Designer</li>
             </ul>
-        </div>   
+        </div>
       </div>
-      <div class="colum-right">
+      <div  id="colum-right" class="colum-right">
         <div class="search">
           <i class="icon-search"></i>
-          <input type="text" name="" value="">
+          <input id="input" type="text" name="" value="">
         </div>
         <div class="students-skills">
           <figure class="figure">
             <img class="image"src="http://dummyimage.com/244x133.png/ff4444/ffffff" alt="diana">
           </figure>
           <div class="colum-1">
-            <h1>DIANA NAVARRO</h1>
+            <h1 id="name"></h1>
             <p>FRONTEND DEVELOPER</p>
             <ul>
               <li>JAVASCRIPT</li>
@@ -40,11 +40,11 @@
           </div>
           <div class="colum-2">
             <div class="box">
-              <h1>95.6%</h1>
+              <h1 id="score-1"></h1>
               <p>TECH SKILLS</p>
             </div>
             <div class="box">
-              <h1>95.6%</h1>
+              <h1 id="score-2"></h1>
               <p>LIFE SKILLS</p>
             </div>
             <div class="box">
@@ -53,11 +53,15 @@
             </div>
           </div>
         </div>
+        <div id="add-Names">
+
+        </div>
       </div>
     </section>
 
 
 
      <script type="text/javascript" src="js/app.js"></script>
+     <script type="text/javascript" src="js/data.js"></script>
   </body>
 </html>
