--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <title></title>
     <link href="https://file.myfontastic.com/xLNFR3UQF2rxkSBgDCxx2C/icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <header>
+      <figure class="logo">
+          <img src="assets/images/logo-laboratoria.svg" alt="logo">
+      </figure>
+      <div  class="icons-header">
+          <span><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></span>
+          <span><a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a></span>
+      </div>
+  </header>
+  <section>
+      <div class="section-1">
+          <h3 class="capital-letter">Lima 2017 - II</h3>
+          <span><a href=""><i class="fa fa-caret-down  fa-3x" aria-hidden="true"></i></a></span>
+          <div>
+              <h5 class="capital-letter"><a href="">overview</a></h5>
+              <h5 class="capital-letter"><a id="anchor-students" href="">students</a></h5>
+              <h5 class="capital-letter"><a href="">teachers</a></h5>
+          </div>
+      </div>
+  </section>
+  <section>
     <!--estructura de la section students-->
     <section class="students">
       <div class="colum-left">
