quitando el header,agregando funcionalidad y estilos

--- a/index.html
+++ b/index.html
@@ -2,22 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>students</title>
     <link href="https://file.myfontastic.com/xLNFR3UQF2rxkSBgDCxx2C/icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header>
-      <figure class="logo">
-          <img src="assets/images/logo-laboratoria.svg" alt="logo">
-      </figure>
-      <div  class="icons-header">
-          <span><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></span>
-          <span><a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a></span>
-      </div>
-  </header>
+
   <section>
       <div class="section-1">
           <h3 class="capital-letter">Lima 2017 - II</h3>
@@ -52,7 +43,7 @@
             <img class="image"src="http://dummyimage.com/244x133.png/ff4444/ffffff" alt="diana">
           </figure>
           <div class="colum-1">
-            <h1 id="name"></h1>
+            <h1>NAME STUDENT</h1>
             <p>FRONTEND DEVELOPER</p>
             <ul>
               <li>JAVASCRIPT</li>
@@ -62,11 +53,11 @@
           </div>
           <div class="colum-2">
             <div class="box">
-              <h1 id="score-1"></h1>
+              <h1>% TECH</h1>
               <p>TECH SKILLS</p>
             </div>
             <div class="box">
-              <h1 id="score-2"></h1>
+              <h1>% LIFE</h1>
               <p>LIFE SKILLS</p>
             </div>
             <div class="box">
@@ -75,9 +66,7 @@
             </div>
           </div>
         </div>
-        <div id="add-Names">
-
-        </div>
+        
       </div>
     </section>
 
