--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           <div class="colum-1">
             <h1>NAME STUDENT</h1>
             <p>FRONTEND DEVELOPER</p>
-            <ul>
-              <li>JAVASCRIPT</li>
-              <li>APIs</li>
-              <li>JQUERY</li>
-            </ul>
+            <div class="container-skills">
+              <p>JAVASCRIPT</p>
+              <p>APIs</p>
+              <p>JQUERY</p>
+            </div>
           </div>
           <div class="colum-2">
             <div class="box">
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        
+
       </div>
     </section>
 
